--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-ads-manager",
-  "version": "2.0.0",
-  "description": "World's Most Advanced Google Ads Tool - Residential Proxy Support",
+  "version": "1.0.0",
+  "description": "Professional Google Ads Management Tool with AI",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
